--- a/views/home.erb
+++ b/views/home.erb
@@ -26,9 +26,10 @@
       <% end %>
     </div>
 
-    <h3> <%= set ? "There is a Set!" : "There is no set" %></h3>
+    <h3> <%= set ? "There is a Set!" : "There is no Set" %></h3>
 
-    <a href="/"> Gimme New Cards! </a>
+    <a href="/"> Gimme Random Cards! </a> <br>
+    <a href="/set"> Gimme a Set! </a>
 
   </div>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
