trying to push to heroku

--- a/views/home.erb
+++ b/views/home.erb
@@ -10,7 +10,7 @@
 <body>
   <div class="container text-center mt-5">
     <h3> Card Set Game Checker! </h3>
-    <p> Cards have 4 attributes. A set happens when all attributes <br> are the same or different between cards.</p>
+    <p> Cards have 4 attributes. You have a set when  all attributes <br> are the same or different in all cards.</p>
     <div class="container-cards">
       <% cards.each_with_index do |card, index| %>
         <div>
